<resources>
    <string name="app_name">APPIK</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="sk">sk</string>
    <string name="user">user</string>
    <string name="skv">skv</string>
    <string name="base_url">base_url</string>
    <string name="date">date</string>
    <string name="secure_key">secure_key</string>
    <string name="customer_name">Nama Pelanggan</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="address">Alamat</string>
    <string name="remark">Keterangan</string>
    <string name="sales_status">Sales Status</string>
    <string name="prospect_date">Tanggal Prospek</string>
    <string name="follow_up_date">Tanggal Follow Up</string>
    <string name="data_customer">Data Customer</string>
    <string name="data_follow_up">Data Follow Up</string>
    <string name="follow_up">Follow Up</string>
    <string name="follow_up_date_next">Tanggal Follow Up Selanjutnya</string>
    <string name="sign_out">sign_out</string>
    <string name="stock">Stok</string>
    <string name="start_date">Tanggal Awal</string>
    <string name="finish_date">Tanggal Akhir</string>
    <string name="search">Cari</string>
    <string name="reporter_name">Nama Pelapor</string>
    <string name="report_date">Tanggal Lapor</string>
    <string name="reporter_phone">No.Hp Pelapor</string>
    <string name="reporter_address">Alamat Pelapor</string>
    <string name="incident">Data Kejadian</string>
    <string name="incident_date">Tanggal Kejadian</string>
    <string name="incident_location">Lokasi Kejadian</string>
    <string name="postal_code">Kode Pos</string>
    <string name="cause_of_incident">Penyebab Kejadian</string>
    <string name="description">Deskripsi Penyebab Kerugian</string>
    <string name="chronology">Kronologi Kejadian</string>
    <string name="insured_amount">Jumlah Pertanggungan</string>
    <string name="data_claim">Data Klaim</string>
    <string name="report">Data Pelapor</string>
    <string name="no_polis">No.Polis</string>
    <string name="register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="data_profile">Data Profil</string>
    <string name="affected_area">Area Terdampak</string>
    <string name="data_approval">Data Approval</string>
    <string name="data_payment">Data Pembayaran</string>
    <string name="identity_card">No. KTP</string>
</resources>
