<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gainsboro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/half_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="@dimen/half_margin"
            card_view:cardCornerRadius="@dimen/half_margin"
            card_view:contentPadding="@dimen/half_margin"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/row_wallet_redeem_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:alpha="0.1"
                android:src="@drawable/back" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    android:text=" " />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:background="#a6cbff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/report"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reporter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reporter_name"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/report_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/report_date"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reporter_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reporter_phone"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reporter_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reporter_address"
                        android:singleLine="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:background="#a6cbff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/incident"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/incident_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/incident_date"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/incident_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/incident_location"
                        android:singleLine="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postal_code"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_margin="@dimen/half_margin"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/cause_of_incident"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spinner_causes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_loses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:singleLine="false" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/chronology"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/chronology"
                        android:singleLine="false" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/affected_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/affected_area"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/insured_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/insured_amount"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                <ImageButton
                android:id="@+id/btn_photo"
                android:background="@drawable/attached"
                android:layout_width="40dp"
                android:text="File"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                />
                        <TextView
                            android:id="@+id/tv_file1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:textIsSelectable="true"
                            android:text="Lokasi Kejadian" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                <ImageButton
                android:id="@+id/btn_attach"
                android:background="@drawable/attached"
                android:layout_width="40dp"
                android:text="File"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                    />
                        <TextView
                            android:id="@+id/tv_file2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:textIsSelectable="true"
                            android:text="Surat Pengajuan" /></LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_margin="@dimen/half_margin"

                    android:text="@string/submit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>