<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gainsboro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/half_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="@dimen/half_margin"
            card_view:cardCornerRadius="@dimen/half_margin"
            card_view:contentPadding="@dimen/half_margin"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/row_wallet_redeem_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:alpha="0.1"
                android:src="@drawable/back" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvwi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="#a6cbff"
                        android:padding="8dp"
                        android:text="@string/data_customer"
                        android:textStyle="bold" />

                <TextView
                    android:id="@+id/customer_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:textIsSelectable="true"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#a6cbff"
                    android:padding="8dp"
                    android:text="@string/data_follow_up"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_margin"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/follow_up_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/follow_up_date"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"

                    android:layout_margin="@dimen/half_margin"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/status"
                        android:textColor="@color/charcoal" />

                    <Spinner
                        android:id="@+id/spinner_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/follow_up_date_next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/follow_up_date_next"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"

                    android:layout_marginBottom="@dimen/margin"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/remark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/remark"
                        android:singleLine="false" />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_margin="@dimen/half_margin"
                    android:background="@color/charcoal"
                    android:text="@string/follow_up"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>