<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Authentication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:src="@drawable/banner_all_new_terios" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.6">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />


                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/gray"
                        android:padding="@dimen/cardview_default_elevation"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/submit"
                        android:textColor="@color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.8">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/gray"
            android:padding="@dimen/cardview_default_elevation"
            android:layout_margin="@dimen/margin"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>