<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gainsboro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/half_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="@dimen/half_margin"
            card_view:cardCornerRadius="@dimen/half_margin"
            card_view:contentPadding="@dimen/half_margin"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/row_wallet_redeem_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:alpha="0.1"
                android:src="@drawable/back" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:background="@color/charcoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="Data User"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/no_polis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_polis"
                        android:inputType="textPhonetic"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/identity_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/identity_card"
                        android:inputType="textPhonetic"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="No. Handphone"
                        android:inputType="textPhonetic"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

 <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
     android:layout_marginTop="40dp"
                        android:gravity="center_vertical"/>
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_margin="@dimen/half_margin"
                    android:background="@color/charcoal"
                    android:text="@string/submit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>